14-Jul-2015 Geraldine Conti
	* PhysObjProxyFiller.cxx: added b-jet requirements (pT>40, |eta|<2.5)
	* ZeroLeptonCRWT.cxx and ZeroLeptonCRZ.cxx : add leptonID in lep1sign/lep2sign variables
	
14-Jul-2015 Marija Vranjes Milosavljevic
	* adding p2372 MC list used for EPS results
	* added alternative lWjetsAlt and lZjetsAlt to the mc15_13TeV_MCSampleList.py
	* reduced cuts in cutfile8TeV.dat for latest production (to be changed back after the EPS rush)
	M       python/mc15_13TeV_MCSampleList.py
	M       data/cutfile8TeV.dat
	M       data/mc15_13TeV_forEPS_p2372.ds

10-Jul-2015 Geraldine Conti
	* update to SUSYTools-00-06-15
	* BuildSUSYObjects.cxx : isTrigPassed -> IsTrigPassed
	* ZeroLeptonSystVariations.cxx : commented out #include "PATInterfaces/SystematicList.h"
	* Trigger : updated for CRWT and CRZ (following Yu's recommendations)

09-Jul-2015 Geraldine Conti
	* commented out trigger for truth code
	* added lines needed to run on truth signal in truth config file
	* fixed trigger of photons


09-Jul-2015 Marija Vranjes Milosavljevic
	* ZeroLeptonSR.cxx, ZeroLeptonCRWT.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx, BuildSUSYObjects.cxx: adding trigger
	selections for EPS note
	* adding ZeroLeptonRun2/data/mc15_13TeV_forEPS.ds with MC datasets list for EPS


08-Jul-2015 Laurent Duflot
	* README: fix typo in 'cleaning' bits for SR and add first
	recommandations for cleaning cuts


08-Jul-2015 Geraldine Conti
	* FilterUpdateMerge.py : add option for LO Z+Jets
	* makeDatasetList.py   : fixed filter efficiencies to 1 for these samples
	* makeDatasetList.py   : added suffix in .txt file name
	* mc15_13TeV_MCSampleList.py : added LO Z+jets samples as alternate samples
	* Cleaning of some photon isolation variables

07-Jul-2015 Laurent Duflot
	* makeDatasetList.py: when approx_GenFiltEff is not found for a dataset
	look in its parents. Same for the cross-section.
	* makeDatasetList.py: add --onlyComplete to keep only complete datasets