@@ -401,7 +401,16 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
 
 
   // FIXME: Apply Lepton scale factors
-  
+  float lepSF[2]; 
+  if(m_isElectronChannel){
+    isolated_signal_electrons[0].getSF(lepSF[0]); 
+    isolated_signal_electrons[1].getSF(lepSF[1]);
+  }
+  if(m_isMuonChannel){
+    isolated_signal_muons[0].getSF(lepSF[0]);
+    isolated_signal_muons[1].getSF(lepSF[1]);
+  }
+
   // Add lepton to jets (SR) or MET (VR)
   TVector2 missingETPrime =  *missingET;
   missingETPrime = missingETPrime +
